# GuardianAI

./: .gitignore  LICENSE  README.md  Vulnerability-model.ipynb  code_snippet_model.h5  data.json  dataset.py  docker-compose.staging.yml  docker-compose.yml  efraf.json  guardianai.py  index.html  newdataset.json  package-lock.json
AI Hackathon/: fingerprint.pb  keras_metadata.pb  saved_model.pb
AI_Hackathon/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Aimodel/: Open_servce_pb2_grpc.py  codebert_test.py  open_ai_service_server.py
DataCollectionService/: .gitignore  app.py  models.py  requirements.txt  (+2 more)
code-detective/: .env  Cargo.toml  Dockerfile  README.md
code-detective/migrations/2024-05-23-225117_insert_initial_rules_and_vulnerabilities/: up.sql
code-detective/src/: grpc_client.rs  handlers.rs  main.rs  producer.rs  tests.rs
code-detective/src/tests/: ast_tests.rs  engine_tests.rs
code_detective/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
code_detective/migrations/2024-05-23-205232_create_rules_and_vulnerabilities/: down.sql  up.sql
code_detective/proto/: analyzer.proto
code_detective/src/: client.rs  engine.rs  handlers.rs  models.rs  schema.rs  server.rs
code_detective/src/engine/: ast.rs
code_detective/src/models/: rule.rs  vulnerability.rs
rule_based_security_engine/: Cargo.toml
rule_based_security_engine/migrations/2024-05-23-225117_insert_initial_rules_and_vulnerabilities/: down.sql
rule_based_security_engine/src/: api.rs  engine.rs  main.rs  models.rs
rule_based_security_engine/src/api/: handlers.rs
rule_based_security_engine/src/engine/: ast.rs
rule_based_security_engine/src/models/: vulnerability.rs
(+109 files in other folders)
