
[package]
name = "code-detective"
version = "0.1.0"
edition = "2021"



[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
dotenv = "0.15.0"
syn = {version = "1.0", features = ["full"]} 
quote = "1.0.36"
tonic = "0.11"
prost = "0.12"
rdkafka = "0.26"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.11"

