
[package]
name = "rule_based_security_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
syn = {version = "1.0", features = ["full"]} 
quote = "1.0.36"

